<resources>
    <string name="app_name">Aplicativo Mercado Garcia</string>
    <string name="facebook_app_id">133351857235113</string>
    <string name="mercado_garcia">Mercado Garcia</string>
    <string name="logo_do_mercado">logo do mercado</string>
    <string name="buscar_pelo_nome_do_produto">Buscar pelo nome do produto:</string>
    <string name="buscar_pelo_codigo_de_barras">Buscar pelo codigo de barras:</string>
    <string name="buscar">Buscar</string>
    <string name="escolha_o_tipo_de_busca">Escolha o tipo de busca:</string>
    <string name="ler_c_digo_de_barras">Leitor de Código de Barras</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="unidade_4">Unid. Aldo Cinquini, 789:</string>
    <string name="unidade_3">Unid. Aldo Cinquini, 541:</string>
    <string name="unidade_2">Unid. Aldo Cinquini, 254:</string>
    <string name="unidade_1">Unid. Azul, 826:</string>
    <string name="mapa">MAPA</string>
</resources>
