<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="452dp"
        android:layout_marginEnd="180dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="34dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/unity_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="256dp"
        android:text="@string/unidade_1"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_map1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/price_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="256dp"
        android:text=""
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_map1"
        app:layout_constraintStart_toEndOf="@+id/unity_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/unity_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/unidade_2"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/unity_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_map2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/price_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="193dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="299dp"
        android:text=""
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_map2"
        app:layout_constraintStart_toEndOf="@+id/unity_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/unity_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/unidade_3"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/unity_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_map3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/price_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="341dp"
        android:text=""
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/btn_map3"
        app:layout_constraintStart_toEndOf="@+id/unity_3"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/unity_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/unidade_4"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_map4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/price_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="384dp"
        android:text=""
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_map4"
        app:layout_constraintStart_toEndOf="@+id/unity_4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="93dp"
        android:layout_height="98dp"
        android:layout_marginBottom="312dp"
        android:layout_marginEnd="133dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" android:contentDescription="TODO" />

    <Button
        android:id="@+id/btn_map2"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_map3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_map1" />

    <Button
        android:id="@+id/btn_map1"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="249dp"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_map2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_map3"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_map4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_map4"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>